<resources>
    <string name="app_name">Routine Checks</string>
    <string name="checkbox">Checkbox</string>
    <string name="no_routines">No routines</string>
    <string name="title">Title (required)</string>
    <string name="description">Description</string>
    <string name="start_time">Start time (required)</string>
    <string name="start_date">Start date (required)</string>
    <string name="frequency">Frequency</string>
    <string name="save">Save</string>
    <string name="edit_icon">Edit icon</string>
    <string name="update">Update</string>
    <string-array name="frequency_array">
        <item>Select frequency</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
</resources>
